Changing Style sheet to fix parallax flicker on phone: Master

--- a/my_website/static/style.css
+++ b/my_website/static/style.css
@@ -140,7 +140,7 @@ a uniform hover color when pressed or clicked*/
 /*Sets global styles and position for all parallax images on the home page*/
 .pimgintro, .pimg1, .pimg2, .pimg3 {
   position:relative;
-  background-position:center;
+  background-position:absolute;
   background-size:cover;
   background-repeat:no-repeat;
   background-attachment:fixed;
@@ -213,8 +213,8 @@ a uniform hover color when pressed or clicked*/
 }
 
 /*@media(max-width:568px){
-  .pimg1, .pimg2, pimg3{
-  background-attachment:scroll;
+  .pimg1, .pimg2, .pimg3 {
+    background-attachment:scroll;
   }
 }*/
 
